UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/User.object
<CustomObject>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                    <label>LA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delegator_Status__c</fullName>
        <formula>IF(ISNULL(Phoenix_Delegation_End_Time__c),&apos;&apos;, IF(Phoenix_Delegation_End_Time__c &lt; NOW(), &apos;Expired&apos;, &apos;Active&apos;))</formula>
        <inlineHelpText>This field is used to get the current delegator status</inlineHelpText>
        <label>Delegator Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Logout_Format__c</fullName>
        <label>Last Logout Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_logout__c</fullName>
        <label>Last logout</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Login_and_Logout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Login and Logout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Delegated_Approver__c</fullName>
        <label>Delegated Approver</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.ProfileId</field>
                <operation>equals</operation>
                <valueField>$Source.ProfileId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <relationshipName>Phoenix_Delegated_Approvers</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Phoenix_Delegation_End_Time__c</fullName>
        <label>Delegation End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phoenix_Delegation_Start_Time__c</fullName>
        <label>Delegation Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_Last_Logout__c</fullName>
        <label>User Last Logout</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>System Administrator,Deployment</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>InactiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Delegation_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Phoenix_Delegation_End_Time__c &lt; Phoenix_Delegation_Start_Time__c</errorConditionFormula>
        <errorMessage>Delegation end time should  be greater than start time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Delegation_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>DATEVALUE(Phoenix_Delegation_Start_Time__c)  &lt;   TODAY()</errorConditionFormula>
        <errorMessage>Delegation start time should be greater than or equal to today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Delegation_fields</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(ISBLANK( Phoenix_Delegated_Approver__c ))   ,  OR(ISBLANK( Phoenix_Delegation_Start_Time__c ), ISBLANK(Phoenix_Delegation_End_Time__c ))   )</errorConditionFormula>
        <errorMessage>Please select delegation start time and end time.</errorMessage>
    </validationRules>
</CustomObject>